[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/sprites/level_object_sprites/untotern/RedButton untotern.tres" type="SpriteFrames" id=1]
[ext_resource path="res://src/level_objects/RedButton.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 106.5, 21 )

[sub_resource type="Animation" id=5]
resource_name = "PRESSED"
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
resource_name = "UNPRESSED"
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="RedButton" type="Area2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "unpressed"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 58 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/PRESSED = SubResource( 5 )
anims/RESET = SubResource( 6 )
anims/UNPRESSED = SubResource( 7 )

[connection signal="body_entered" from="." to="." method="_on_RedButton_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_RedButton_body_exited"]
